fixes some minor bugs and refractors some code from the media player. also adds all functionality for the media players progress bar though it remains purple. also adds a bug where the correct songs timestamp is not showing when pressing play after page load

--- a/themes/karakata/sass/CODE-DUMP.scss
+++ b/themes/karakata/sass/CODE-DUMP.scss
@@ -557,6 +557,7 @@ a {
 
   .progress-overlay {
       position: absolute;
+      pointer-events: none;
       left: 0px;
       top: 0px;
       height: 100%;
